--- a/tailwind.css
+++ b/tailwind.css
@@ -4,4 +4,5 @@
     --color-primary: #FD841F;
     --color-primaryHover: #F25019;
     --color-secondary: #d9d9d9;
+    --color-secondaryHover: #808080;
 }
