--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,9 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+  .fc .fc-col-header {
+    background-color:#FFF4E3 ;
+   }
 }
 /* Números de los días */
 .fc .fc-daygrid-day-number {
@@ -77,4 +80,9 @@ button:focus-visible {
 .fc .fc-col-header-cell-cushion {
   color: #FD841F;
   font-weight: 600;
+}
+@media (prefers-color-scheme: dark) {
+  .fc .fc-col-header {
+   background-color:#1e1e1e ;
+  }
 }
